cmake_minimum_required (VERSION 2.6)
project (Olaf)

SET (CMAKE_CXX_FLAGS "-pthread -Wno-deprecated-declarations -g")

include_directories ($ENV{ACE_ROOT})
include_directories ($ENV{TAO_ROOT})
include_directories ($ENV{DDS_ROOT})
include_directories ($ENV{DDS_ROOT})
include_directories (${CMAKE_CURRENT_SOURCE_DIR}/src/util/ini_parser)
include_directories (${CMAKE_CURRENT_SOURCE_DIR}/src/msg/cam)
include_directories (${CMAKE_CURRENT_SOURCE_DIR}/src/msg/gps)
include_directories (${CMAKE_CURRENT_SOURCE_DIR}/src/msg/hw)
include_directories (${CMAKE_CURRENT_SOURCE_DIR}/src/msg/imu)
include_directories (${CMAKE_CURRENT_SOURCE_DIR}/src/msg/log/info_msg)

link_directories ($ENV{ACE_ROOT}/lib)
link_directories ($ENV{DDS_ROOT}/lib)
link_directories (${CMAKE_CURRENT_SOURCE_DIR}/util/logger)
link_directories (${CMAKE_CURRENT_SOURCE_DIR}/util/msg/log/info_msg)
link_directories (${CMAKE_BINARY_DIR}/lib/msg)

link_libraries (OpenDDS_Tcp)
link_libraries (OpenDDS_InfoRepoDiscovery)
link_libraries (OpenDDS_Dcps)
link_libraries (TAO_PortableServer)
link_libraries (TAO_AnyTypeCode)
link_libraries (TAO)
link_libraries (ACE)
link_libraries (log4cplus)

add_subdirectory (src)
add_subdirectory (test)
add_subdirectory (scripts)
